# timeflux-mnelsl

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: main.yml
docs/: CHANGELOG.md
examples/: mne-lsl.yaml
src/timeflux_mnelsl/: __init__.py
src/timeflux_mnelsl/nodes/: __init__.py  lsl.py
tests/: test_lsl.py
